# sprite-builder

./: .dockerignore  .gitignore  Dockerfile  README.md  codespace_plan.md  dev.sh  railway.toml
adr/: README.md  (+19 more)
backend/: .env.example  Cargo.toml  clippy.toml  deny.toml
backend/.sqlx/: query-0a39fe6f531374ed4eca42cca849c5b42c40a2cde2957c1966f96156a0ea6882.json  query-125503224ce569991cbf906e50f52b61523fd530622ecc1bcc86f2c8022a9bf6.json  query-1a90b6c6b50b2b139f3c34c8bd45f777554a2168de7b11c3777d980cf8b6c649.json  query-1ef933485c447454ebf19a635850023dafd6600adc0ada580882064f422a428e.json  query-1ff75cad007f39d293b03e5ea32c689fc8ea5cc4270cb434ad91878923ebd1c4.json  query-21c5c56b255c92761e3d2913f49aff6047aea7fa4072a4122faa77886b2fd042.json  query-2a0860303e31f491d839d4ffb80353c908f69f8377a139bf547ae0aee69b0d2d.json  query-3dbdfccea6232848ff1f1ee4207436c4e426e9c0d0cedb3ee2bcc106c7a05d83.json  query-43ef55496eea099f2eb660451cc2a797335d11c11e76eef78029b266736f051a.json  query-631a2f2802406623ccf98726354b699abfa105380d367ed4fc5b64d27a5bba9d.json  query-6ba44d5d66b275479f1f4e02d6bf1fe95b4825c4ffecf036c14a50c40215b842.json  query-88be5a770cb5eed4fb35f8cc9d3be0c35403694bd79a44dddeefe5a49b9320c5.json  query-8c11995abdc568a5935ba82df0534318670494df23ef0de54232d180cb5042e0.json  query-a016871720428eede40d906c13dd289ee4a8fcdb3aefeb71135f57b6bfd4dca0.json  query-ab076b22d133cd997c4db0d893947d81a44ec67500d1b615d52e4b630181843d.json  query-b1da598c9aad629f0eaf947302cdd38ef6903a23a4efca51f56e2362b356063f.json  query-b63132a494987c344ce581066c3a3d6374c852da38134ba2fc64aa9d40da98d0.json  (+9 more)
(+59 files in other folders)
