[package]
name = "sprite-builder"
version = "0.1.0"
edition = "2021"
default-run = "sprite-builder"

[lib]
name = "sprite_builder"
path = "src/lib.rs"

# API server
[[bin]]
name = "sprite-builder"
path = "src/main.rs"

# Background build worker (deployed as a separate process)
[[bin]]
name = "sprite-builder-worker"
path = "src/worker/main.rs"

# One-shot migration runner
[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower = "0.5"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
urlencoding = "2"
